# drf-auth

./: README.md  docker-compose.yml  pyproject.toml
api/: settings.py  urls.py
beer_reviews/: apps.py  models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
beer_reviews/migrations/: 0001_initial.py  0002_review_brewery.py
tests/: test_django_rest_api.py
