[tool.poetry]
name = "django-rest-api-auth"
version = "0.3.0"
description = ""
authors = ["Eugene Monnier <eugene.monnier@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
django = "^3.1.9"
djangorestframework = "^3.11.0"
psycopg2-binary = "^2.8.5"
djangorestframework_simplejwt = "^4.4.0"
gunicorn = "^20.0.4"
whitenoise = "^5.1.0"
django-cors-headers = "^3.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
